--- a/layouts/base.html
+++ b/layouts/base.html
@@ -12,6 +12,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
+        <link rel="alternate" type="application/rss+xml" href="/blog/rss.xml" title="RSS feed for Aron's blog">
+
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
         <!--[if lt IE 8]>
