--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -18,7 +18,7 @@
             <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <![endif]-->
 
-        <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+        <script src="/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
 
     {{content}}
