--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -10,7 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="alternate" type="application/rss+xml" href="/blog/rss.xml" title="RSS feed for Aron's blog">
+        <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml" />
+        <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml" />
 
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
