WIP major restructuring for scampersand release

--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -9,7 +9,7 @@
 /* -------------------- Sizes --------------------
 
 body
-  font-size: $base-font-size
+  font-size: 1em
   &.resume
     font-size: 95%
 
@@ -53,6 +53,7 @@ p, pre, table
 
 pre
   padding: 1em
+  overflow-x: scroll
 
 code, tt // always inside p/pre
   /* 16/16
