--- a/site/_layouts/article.html
+++ b/site/_layouts/article.html
@@ -1,17 +1,10 @@
 ---
 layout: default
-bodyclass: blog-article
+body_class: blog-article
 ---
 
 <article>
-    <header>
-        <h4>{{page.date|date:'%Y-%m-%d'}}</h4>
-        <h2>{{page.title}}</h2>
-    </header>
-
-    <section>
-        {{content}}
-    </section>
+    {{content}}
 </article>
 
 <div id="disqus_thread"></div>
