--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width">
+
         <title>{{page.title}}</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
 
         <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml" />
         <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml" />
 
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
-        <!--[if lt IE 8]>
-            <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <![endif]-->
 
         <script src="/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
 
-    {{content}}
+    <body class="{{page.body_class|default:layout.body_class}}">
+        {{content}}
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<' + 'script src="/js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
+
+        <script type="text/javascript">
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-39603016-1', 'arongriffis.com');
+            ga('send', 'pageview');
+        </script>
+    </body>
 </html>
