update markup in preparation for presentation

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -34,6 +34,16 @@ logo_link: /
     </main>
 
     <footer>
-        &copy; 2011-2016 <a href="mailto:aron@arongriffis.com">Aron Griffis</a>
+        <div>
+            <p>Built with ... </p>
+            <p>&copy; 2011-2016 <a href="mailto:aron@arongriffis.com">Aron Griffis</a></p>
+        </div>
+        <div>
+            <a href="https://www.linkedin.com/in/agriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/linkedin.png"></a>
+            <a href="https://twitter.com/arongriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/twitter.png"></a>
+            <a href="https://github.com/agriffis"><img src="/img/social/GitHub-Mark/PNG/GitHub-Mark-{{page.social_icon_px}}px.png"></a>
+        </div>
     </footer>
 </div>
+
+
