--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -4,6 +4,9 @@
 
 .container {
     @include container(40em);
+
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 /*---------------------------------------------------------------
