--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -17,7 +17,7 @@ logo_link: /
 
     <footer class="page-footer">
         <div>
-            <p>&copy; 2016 Aron Griffis &bull; Built with Jekyll &amp; Susy</p>
+            <p>&copy; 2011-{{site.time|date:"%Y"}} Aron Griffis &bull; Built with <a href="https://jekyllrb.com/">Jekyll</a> &amp; <a href="http://susy.oddbird.net/">Susy</a></p>
         </div>
     </footer>
 </div>
