move social media icons to page footer

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -16,10 +16,19 @@ logo_link: /
     </main>
 
     <footer class="page-footer">
-        <div>
-            <p>&copy; Aron Griffis 2011-{{site.time|date:"%Y"}} &bull; Built with <a href="https://jekyllrb.com/">Jekyll</a> &amp; <a href="http://susy.oddbird.net/">Susy</a></p>
+        <div class="info-site">
+            <p>&copy; Aron Griffis 2011-{{site.time|date:"%Y"}}</p>
+            <!-- <p>Built with <a href="https://jekyllrb.com/">Jekyll</a> &amp; <a href="http://susy.oddbird.net/">Susy</a></p> -->
+        </div>
+        <div class="info-social">
+            <div class="icons-social">
+                <a href="https://www.linkedin.com/in/agriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/linkedin.png"></a>
+                <a href="https://twitter.com/arongriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/twitter.png"></a>
+                <a href="https://github.com/agriffis"><img src="/img/social/GitHub-Mark/PNG/GitHub-Mark-{{page.social_icon_px}}px.png"></a>
+            </div>
         </div>
     </footer>
-</div>
+</div> <!-- .container -->
+
 
 
