presentation for page footer

--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -85,9 +85,6 @@ footer.page-footer
 header.page-header
   margin-top: 0.5rem
 
-footer.page-footer
-  margin-bottom: 2em
-
 h1
   /* article title
   margin-top: 0
@@ -118,6 +115,8 @@ div.post-markdown
 
 footer.page-footer
   margin-top: 1.5rem
+  padding-top: 1rem
+  padding-bottom: 2rem
 
 main.page-content
   margin-top: 2rem
@@ -139,9 +138,14 @@ pre
   color: #555
 
 a
-  background-color: #fff
   color: #5EB12C
   /* light green
+
+.page-footer
+  border-top-color: #246EB9
+  /* color matches symbol at top of page
+  border-top-style: solid
+  border-top-width: 3px
 
 /* -------------------- Media Queries ---------------------
 
