ems for media-queries, percent for base font size

--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -22,7 +22,7 @@ pre, code, kbd, samp, tt
 
 html
   /* 20/30
-  font-size: 1rem
+  font-size: 100%
   line-height: 1.5
 //  &.resume
 //    font-size: 95%
@@ -150,8 +150,8 @@ a
 /* -------------------- Media Queries ---------------------
 
 html
-  @media (min-width: 376px)
-    font-size: 1.25rem
+  @media (min-width: 23.5em) // chrome dev tools represents iphone 6 as 375px
+    font-size: 125%
 
 main.page-content
   @media (min-height: 1025px)
