img max-width 100

--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -147,6 +147,11 @@ a
   border-top-style: solid
   border-top-width: 3px
 
+/* -------------------- Images ----------------------------
+
+img
+  max-width: 100%
+
 /* -------------------- Media Queries ---------------------
 
 html
