no longer need extra top margin, since there's more content

--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -158,7 +158,7 @@ html
   @media (min-width: 23.5em) // chrome dev tools represents iphone 6 as 375px
     font-size: 125%
 
-main.page-content
-  @media (min-height: 1025px)
-    margin-top: 5vh
+/* main.page-content
+/*   @media (min-height: 1025px)
+/*     margin-top: 5vh
 
