use flaticon font for social icons

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -22,9 +22,9 @@ logo_link: /
         </div>
         <div class="info-social">
             <div class="icons-social">
-                <a href="https://www.linkedin.com/in/agriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/linkedin.png"></a>
-                <a href="https://twitter.com/arongriffis"><img src="/img/social/pixeden/{{page.social_icon_px}}x{{page.social_icon_px}}px-png/twitter.png"></a>
-                <a href="https://github.com/agriffis"><img src="/img/social/GitHub-Mark/PNG/GitHub-Mark-{{page.social_icon_px}}px.png"></a>
+                <a href="https://www.linkedin.com/in/agriffis"><i class="flaticon flaticon-linkedin-logo"></i></a>
+                <a href="https://twitter.com/arongriffis"><i class="flaticon flaticon-twitter-logo"></i></a>
+                <a href="https://github.com/agriffis"><i class="flaticon flaticon-github-logo"></i></a>
             </div>
         </div>
     </footer>
