--- a/site/css/partials/_styles.sass
+++ b/site/css/partials/_styles.sass
@@ -128,7 +128,7 @@ body
   color: #777
 
 h1, h2, h3
-  color: #444 
+  color: #444
 
 header h2
   color: #5EB12C
@@ -146,6 +146,9 @@ a
   /* color matches symbol at top of page
   border-top-style: solid
   border-top-width: 3px
+
+.flaticon
+  color: #444  // match headers rather than links
 
 /* -------------------- Images ----------------------------
 
