float social icons right, instead of grid

--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -19,10 +19,16 @@ $susy :(
     @include span(full);
 }
 
+/*
 .info-site {
     @include span(2 of 4);
 }
 
 .info-social {
     @include last;
+}
+*/
+
+.info-social {
+    float: right;
 }
