--- a/site/_layouts/article.html
+++ b/site/_layouts/article.html
@@ -30,3 +30,6 @@ body_class: blog-article
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<!-- img srcset polyfill -->
+<script src="/js/vendor/picturefill-3.0.2.min.js"></script>
