atari basic draft

--- a/site/_layouts/article.html
+++ b/site/_layouts/article.html
@@ -31,5 +31,8 @@ body_class: blog-article
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
+<!-- mathjax support for jekyll -->
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
 <!-- img srcset polyfill -->
 <script src="/js/vendor/picturefill-3.0.2.min.js"></script>
