--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -17,7 +17,7 @@
     </head>
 
     <body class="{{page.body_class|default:layout.body_class}}">
-        {{content}}
+        {{content|replace:"–","--"|pants}}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<' + 'script src="/js/vendor/jquery-1.8.1.min.js"><\/script>')</script>
