switch from compass to jekyll built-in sass.

--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -1,6 +1,9 @@
-@import "partials/normalize";
-@import "partials/styles";
-@import "partials/flaticon";
+---
+---
+
+@import "normalize";
+@import "styles";
+@import "flaticon";
 @import "susy";
 
 $susy :(
