pre horiz scroll only if necessary

--- a/site/_sass/styles.sass
+++ b/site/_sass/styles.sass
@@ -65,7 +65,7 @@ p.post-excerpt
 
 pre
   padding: 1em
-  overflow-x: scroll
+  overflow-x: auto
 
 code, tt
   /* 16/16
@@ -164,4 +164,3 @@ html
 /* main.page-content
 /*   @media (min-height: 1025px)
 /*     margin-top: 5vh
-
