--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -5,6 +5,14 @@
 @import "styles";
 @import "flaticon";
 
+// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 .container {
     max-width: 36em;
     margin-left: auto;
