--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -42,9 +42,7 @@
         <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml">
         <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml">
 
-        {% comment %}
         <script src="/js/vendor/modernizr-3.3.1-custom.min.js"></script>
-        {% endcomment %}
 
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
         {% comment %}
@@ -85,6 +83,18 @@
             }();
         </script>
         {% endcomment %}
+
+        <script>
+            $(function() {
+                var $video = $('video'),
+                    src = $('video').attr('src'),
+                    needH264 = (Modernizr.video.ogg !== true &&
+                                Modernizr.video.h264 === true); // vs "probably"
+                if (needH264) {
+                    $video.attr('src', src.replace(/\.ogv$/, '.mkv'));
+                }
+            });
+        </script>
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
