--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -84,6 +84,7 @@
         </script>
         {% endcomment %}
 
+        {% comment %}
         <script>
             $(function() {
                 var $video = $('video'),
@@ -95,6 +96,7 @@
                 }
             });
         </script>
+        {% endcomment %}
 
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
