--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -98,6 +98,7 @@
         </script>
         {% endcomment %}
 
+        {% if jekyll.environment == "production" %}
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -106,6 +107,7 @@
             ga('create', 'UA-39603016-1', 'arongriffis.com');
             ga('send', 'pageview');
         </script>
+        {% endif %}
     </head>
 
     <body class="{{page.body_class|default:layout.body_class}}">
