don't force https for mathjax

--- a/site/_layouts/article.html
+++ b/site/_layouts/article.html
@@ -19,7 +19,7 @@ body_class: blog-article
 </article>
 
 <div id="disqus_thread"></div>
-<script type="text/javascript">
+<script>
     var disqus_shortname = 'arongriffiscom';
     var disqus_identifier = 'blog-{{page.id|remove_first:'/'|replace:'/','-'}}';
     (function() {
@@ -32,7 +32,7 @@ body_class: blog-article
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 <!-- mathjax support for jekyll -->
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <!-- img srcset polyfill -->
 <script src="/js/vendor/picturefill-3.0.2.min.js"></script>
