--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -44,6 +44,13 @@
 
         <script src="/js/vendor/modernizr-3.3.1-custom.min.js"></script>
 
+        <!-- img srcset polyfill -->
+        <script>
+            // Picture element HTML5 shiv
+            document.createElement( "picture" );
+        </script>
+        <script src="/js/vendor/picturefill-3.0.2.min.js" async></script>
+
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
         {% comment %}
         <style>
