--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -42,7 +42,9 @@
         <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml">
         <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml">
 
+        {% comment %}
         <script src="/js/vendor/modernizr-3.3.1-custom.min.js"></script>
+        {% endcomment %}
 
         <!-- img srcset polyfill -->
         <script>
@@ -62,8 +64,8 @@
         </style>
         {% endcomment %}
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
         {% comment %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.21.0/ramda.min.js"></script>
         {% endcomment %}
 
