--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -2,30 +2,9 @@
 ---
 
 @import "normalize";
+@import "scale";
+@import "layout";
 @import "styles";
+@import "colors";
+@import "media";
 @import "flaticon";
-
-// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
-html {
-    box-sizing: border-box;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-.container {
-    max-width: 36em;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    &:after {
-        content: " ";
-        display: block;
-        clear: both;
-    }
-}
-
-.info-social {
-    float: right;
-}
