apply bg color to inline code too

--- a/site/_sass/colors.scss
+++ b/site/_sass/colors.scss
@@ -11,12 +11,8 @@ header h2 {
     color: #5EB12C;
 }
 
-pre {
+pre, code, tt {
     background-color: #ddd;
-    color: #555;
-}
-
-code, tt {
     color: #555;
 }
 
