--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -39,7 +39,9 @@
         <!--===========================================================
              atom/rss feeds
         =============================================================-->
+        {% comment %}
         <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml">
+        {% endcomment %}
         <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml">
 
         {% comment %}
