--- a/site/_sass/scale.scss
+++ b/site/_sass/scale.scss
@@ -55,6 +55,6 @@ pre, p code {
     @include font-sizes(0.875em, 0.75em, 0.75em, 1);
 }
 
-time, div.info-site {
+time, div.info-site p {
     @include font-sizes(0.875em, 0.75em, 0.75em);
 }
