--- a/site/_layouts/article.html
+++ b/site/_layouts/article.html
@@ -3,15 +3,22 @@ layout: default
 body_class: blog-article
 ---
 
-<article>
+<article itemscope itemtype="http://schema.org/CreativeWork">
     <header>
         <h1>{{page.title}}</h1>
         {% if page.subtitle %}
-        <h2>{{page.subtitle}}</h2>
+            <h2>{{page.subtitle}}</h2>
         {% endif %}
-        {% if page.date %}
-        <time class="page-date" datetime"{{page.date|date:'%Y-%m-%d'}}">{{page.date|date:'%b %d, %Y'}}</time>
-        {% endif %}
+        <div class="post-meta">
+            {% if page.date %}
+                <time datetime="{{page.date|date_to_xmlschema}}"
+                      itemprop="datePublished">{{page.date|date:'%b %d, %Y'}}</time>
+            {% endif %}
+            {% if page.last_modified_at and page.last_modified_at != page.date %}
+                (updated: <time datetime="{{page.last_modified_at|date_to_xmlschema}}"
+                                itemprop="dateModified">{{page.last_modified_at|date:'%b %d, %Y'}}</time>)
+            {% endif %}
+        </div>
     </header>
     <div class="post-markdown">
         {{content}}
