--- a/site/_sass/scale.scss
+++ b/site/_sass/scale.scss
@@ -61,6 +61,6 @@ pre, p code {
                         $desktop-line-height: 1);
 }
 
-time, div.info-site p {
+.post-meta, div.info-site p {
     @include font-sizes(0.875em, 0.75em, 0.75em);
 }
