--- a/site/_sass/styles.scss
+++ b/site/_sass/styles.scss
@@ -23,3 +23,13 @@ p > code {
     padding: 2px;
     border-radius: 3px;
 }
+
+.note {
+    &::before {
+        content: "Note: ";
+    }
+    padding: 1em;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0 0 10px #ddd;
+}
