repair Ubuntu non-mono

--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -55,6 +55,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
         <link href="/fonts/Ubuntu-Mono.css" media="screen, projection" rel="stylesheet" type="text/css">
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 
