verify micro.blog

--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -42,6 +42,11 @@
         <link rel="alternate" type="application/atom+xml" title="{{site.title}}" href="/atom.xml">
         <link rel="alternate" type="application/rss+xml" title="{{site.title}}" href="/rss.xml">
 
+        <!--===========================================================
+             site verification
+        =============================================================-->
+        <link rel="me" href="https://micro.blog/agriffis">
+
         {% comment %}
         <script src="/js/vendor/modernizr-3.3.1-custom.min.js"></script>
         {% endcomment %}
