switch to ibm plex

--- a/site/_layouts/base.html
+++ b/site/_layouts/base.html
@@ -60,8 +60,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
-        <link href="/fonts/Ubuntu-Mono.css" media="screen, projection" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans+Condensed:700|IBM+Plex+Sans:400,400i,500,600" rel="stylesheet">
         <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 
         <script>
