--- a/site/_sass/colors.scss
+++ b/site/_sass/colors.scss
@@ -1,6 +1,8 @@
+$symbol-bg: #246EB9;
+
 body {
     background-color: #fff;
-    color: #777;
+    color: #555;
 }
 
 h1, h2, h3 {
@@ -17,19 +19,16 @@ pre, code, tt {
 }
 
 a {
-    color: #5EB12C;
-
-    /* light green */
+    // color: #5EB12C; /* light green */
+    color: $symbol-bg;
 }
 
 .page-footer {
-    border-top-color: #246EB9;
-
-    /* color matches symbol at top of page */
+    border-top-color: $symbol-bg;
     border-top-style: solid;
     border-top-width: 3px;
 }
 
 .flaticon {
-    color: #444;
+    color: #333;
 }
