--- a/site/_sass/styles.scss
+++ b/site/_sass/styles.scss
@@ -1,15 +1,21 @@
 body {
-    font-family: "Ubuntu", sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
-    font-size-adjust: 0.5;
+    // font-size-adjust: 0.5;
+}
+
+h1, h2, h3 {
+    font-family: "IBM Plex Sans Condensed", sans-serif;
+    font-weight: 700;
 }
 
 pre, code, kbd, samp, tt {
-    font-family: "Ubuntu Mono", monospace;
+    font-family: "IBM Plex Mono", monospace;
 }
 
 a {
     text-decoration: none;
+    font-weight: 500;
 }
 
 pre {
