--- a/site/_sass/layout.scss
+++ b/site/_sass/layout.scss
@@ -31,8 +31,11 @@ h1 {
 }
 
 // section headings
-h2, h3 {
-    margin-top: 1.5rem;
+h2 {
+    margin-top: 3rem;
+}
+h3 {
+    margin-top: 2rem;
 }
 
 // hi, i'm aron
