--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -98,6 +98,9 @@ const {
     </a>
     <Nav class="nav" />
     <h1 class="heading">{heading}</h1>
+    <div class="post-meta">
+      <slot name="post-meta" />
+    </div>
     <main>
       <slot />
     </main>
