chore: port more posts from nextjs

--- a/src/components/Markdown.astro
+++ b/src/components/Markdown.astro
@@ -23,8 +23,8 @@
     }
 
     /**
-   * https://searchfox.org/mozilla-central/source/layout/style/res/html.css
-   */
+     * https://searchfox.org/mozilla-central/source/layout/style/res/html.css
+     */
     ol,
     ul {
       margin-block-start: var(--space4);
@@ -107,7 +107,8 @@
       border-top: 3px solid var(--accentColor);
     }
 
-    &::selection, & ::selection {
+    &::selection,
+    & ::selection {
       color: var(--syntax-visual-fg);
       background: var(--syntax-visual-bg);
     }
