--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -154,4 +154,9 @@ const varsHtml = [
     color: var(--linkColor);
     text-decoration: none;
   }
+  pre,
+  code {
+    background: var(--syntax-background);
+    color: var(--syntax-text);
+  }
 </style>
